[package]
name = "veteshnik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.15.0"
rusty-money = { version = "0.4.1", features = ["iso"] }
time = "0.3.20"
